--- a/website/content/docs/auth/azure.mdx
+++ b/website/content/docs/auth/azure.mdx
@@ -398,7 +398,7 @@ namespace Examples
   
 ## Authentication Flows and Role Restrictions
   
-This section provides more details about the authentication flows and associated restrictions that be supplied in the the role definition.
+This section provides more details about the authentication flows and associated restrictions that can be supplied to the the role definition.
   
 There are 3 core flows and associated methods of restricting a role in the Azure Auth Method:
 - JWT Flow: Identity based restrictions that use claims from the JWT.
