--- a/website/content/docs/auth/azure.mdx
+++ b/website/content/docs/auth/azure.mdx
@@ -401,7 +401,7 @@ namespace Examples
 This section provides more details about the authentication flows and associated restrictions that can be supplied to the the role definition.
   
 There are 3 core flows and associated methods of restricting a role in the Azure Auth Method:
-- JWT Flow: Identity based restrictions that use claims from the JWT.
+- JWT Flow: Identity-based restrictions that use claims from the JWT.
 - VM Flow: Virtual Machine (VM) based restrictions that use data from the Virtual Machine.
 - VMSS Flow: Virtual Machine Scale Set (VMSS) based restrictions that use data from the Virtual Machine Scale Set.
   
