--- a/website/content/docs/auth/azure.mdx
+++ b/website/content/docs/auth/azure.mdx
@@ -403,7 +403,7 @@ This section provides more details about the authentication flows and associated
 There are 3 core flows and associated methods of restricting a role in the Azure Auth Method:
 - JWT Flow: Identity-based restrictions that use claims from the JWT.
 - VM Flow: Virtual Machine (VM) based restrictions that use data from the Virtual Machine.
-- VMSS Flow: Virtual Machine Scale Set (VMSS) based restrictions that use data from the Virtual Machine Scale Set.
+- VMSS Flow: Virtual Machine Scale Set (VMSS)-based restrictions that use data from the Virtual Machine Scale Set.
   
 The VM and VMSS based restrictions can only be used for those resource types. If using Azure Kubernetes Service, Azure Container Instance or some other resource type that supports a managed identity, you cannot apply the restrictions applicable to VM and VMSS.
   
