--- a/website/content/docs/auth/azure.mdx
+++ b/website/content/docs/auth/azure.mdx
@@ -405,7 +405,7 @@ There are 3 core flows and associated methods of restricting a role in the Azure
 - VM Flow: Virtual Machine (VM) based restrictions that use data from the Virtual Machine.
 - VMSS Flow: Virtual Machine Scale Set (VMSS)-based restrictions that use data from the Virtual Machine Scale Set.
   
-The VM and VMSS based restrictions can only be used for those resource types. If using Azure Kubernetes Service, Azure Container Instance or some other resource type that supports a managed identity, you cannot apply the restrictions applicable to VM and VMSS.
+The VM and VMSS-based restrictions can only be used for those resource types. If using Azure Kubernetes Service, Azure Container Instance, or some other resource type that supports a managed identity, you cannot apply the restrictions applicable to VM and VMSS.
   
 The restrictions that apply only to VM or VMSS are:
 - Locations `bound_locations`.
