--- a/website/content/api-docs/secret/transit.mdx
+++ b/website/content/api-docs/secret/transit.mdx
@@ -104,6 +104,10 @@ returned by Vault and the encryption of the import key material under the
 provided AES key. The wrapped AES key should be the first 512 bytes of the
 ciphertext, and the encrypted key material should be the remaining bytes.
 
+- `hash_function` `(string: <required>)` - The hash function used for the
+RSA-OAEP step of creating the ciphertext. Supported hash functions are:
+`SHA-1`, `SHA-224`, `SHA-256`, `SHA-384`, and `SHA-512`.
+
 - `type` `(string: <required>)` – Specifies the type of key to create. The
   currently-supported types are:
 
@@ -190,6 +194,10 @@ provided AES key. The wrapped AES key should be the first 512 bytes of the
 ciphertext, and the encrypted key material should be the remaining bytes.
 See the BYOK section of the [Transit secrets engine documentation](/docs/secret/transit)
 for more information on constructing the ciphertext.
+
+- `hash_function` `(string: <required>)` - The hash function used for the
+RSA-OAEP step of creating the ciphertext. Supported hash functions are:
+`SHA-1`, `SHA-224`, `SHA-256`, `SHA-384`, and `SHA-512`.
 
 ### Sample Payload
 
