--- a/website/content/docs/secrets/pki/index.mdx
+++ b/website/content/docs/secrets/pki/index.mdx
@@ -23,6 +23,21 @@ allows for ephemeral certificates. Certificates can be fetched and stored in
 memory upon application startup and discarded upon shutdown, without ever being
 written to disk.
 
+## Table of Contents
+
+The PKI Secrets Engine documentation is split into the following pieces:
+
+ - [Overview](/docs/secrets/pki) - this document.
+ - [Setup and Usage](/docs/secrets/pki/setup) - a brief description of setting
+   up and using the PKI Secrets Engine to issue certificates.
+ - [Quick Start - Root CA Setup](/docs/secrets/pki/quick-start-root-ca) - A
+   quick start guide for setting up a root CA.
+ - [Quick Start - Intermediate CA Setup](/docs/secrets/pki/quick-start-intermediate-ca) - A
+   quick start guide for setting up an intermediate CA.
+ - [Considerations](/docs/secrets/pki/considerations) - A list of helpful
+   considerations to keep in mind when using and operating the PKI Secrets
+   Engine.
+
 ## Learn
 
 Refer to the [Build Your Own Certificate Authority (CA)](https://learn.hashicorp.com/vault/secrets-management/sm-pki-engine)
