Add note that short TTLs are relative to quantity
As suggested by Ricardo Oliveira, thanks!

Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -154,6 +154,30 @@ range of 30 to 90 days), and the [rotation strategies discussed in other
 sections](/docs/secrets/pki/rotation-primitives), this should keep the
 CRLs adequately small.
 
+### Cluster Performance and Quantity of Leaf Certificates
+
+As mentioned above, keeping TTLs short (or using `no_store=true`, preventing
+revocation) and avoiding leases is important for a healthy cluster. However
+it is important to note this is a scale problem: 10-1000 long-lived, stored
+certificates are probably fine, but 50k-100k become a problem and 500k+
+stored, unexpired certificates can negatively impact even large Vault
+clusters--even with short TTLs!
+
+However, once these certificates are expired, a [tidy operation](/api-docs/secret/pki#tidy)
+will clean up CRLs and Vault cluster storage.
+
+Note that organizational risk assessments for certificate compromise might
+mean certain certificate types should always be issued with `no_store=false`;
+even short-lived broad wildcard certificates (say, `*.example.com`) might be
+important enough to have precise control over revocation. However, an internal
+service with a well-scoped certificate (say, `service.example.com`) might be
+of low enough risk to issue a 90-day TTL with `no_store=true`, preventing
+the need for revocation in the unlikely case of compromise.
+
+Having a shorter TTL decreases the likelihood of needing to revoke a cert
+(but cannot prevent it entirely) and decrease the impact of any such
+compromise.
+
 ## You must configure issuing/CRL/OCSP information _in advance_
 
 This secrets engine serves CRLs from a predictable location, but it is not
